gatekeeper/lab-1/constraints/disallow-privileged-container.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: disallow-privileged-container
spec:
  match:
    namespaces:
      - "default"          # apply to the "default" namespace
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]     # apply to Pods
  enforcementAction: deny  # Remove this line to deny non-compliant requests
